# Paillier-HE-Copy-Protector

./: .gitignore  CURRENT_STATUS.md  Cargo.toml  DEMO_IMPLEMENTATION_SUMMARY.md  README.md  README_DEMO.md  SECURITY_AUDIT_CHECKLIST.md  VETKD_IMPLEMENTATION_SUMMARY.md  VETKD_INTEGRATION_GUIDE.md  canister_ids.json  deploy.sh  dfx.json  index.html  monitor_performance.js  monitor_performance_vetkd.js  package-lock.json  package.json  setup_demo.sh  standalone_demo.html  tailwind.config.js  test_canister.sh  test_vetkd_integration.sh  vite.config.ts
.cargo/: config.toml
scripts/: build-frontend.sh
src/paillier-canister/: Cargo.toml  paillier-canister.did
src/paillier-canister/src/: lib.rs
src/paillier-core/: Cargo.toml
src/paillier-core/src/: lib.rs
src/paillier_poc_backend/: Cargo.toml  paillier_poc_backend.did
src/paillier_poc_backend/src/: lib.rs  simple_paillier.rs  vetkd_check.rs  vetkd_utils.rs
web/: .ic-assets.json5  DEPLOYMENT_NOTES.md  test-key-direct.json  test-key-upload.json
web/public/: .ic-assets.json5
web/public/.well-known/: ic-domains
web/src/: App.svelte
web/src/lib/: tokenizer-comparison.ts  tokenizer.ts  types.ts
web/src/lib/api/: auth.ts  canister.ts
web/src/lib/components/: AuthButton.svelte  DocumentAction.svelte  DocumentList.svelte  DocumentSelector.svelte  DocumentSubmit.svelte  KeyManager.svelte  MarkdownUpload.svelte  TokenPreview.svelte
web/src/lib/crypto/: demoKeys.ts  encryptionService.ts  keyGenerator.ts  keyStorage.ts  paillier.ts
