[package]
name = "paillier-canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = "0.6"
num-bigint = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"

[dev-dependencies]
candid_parser = "0.1.0"