[package]
name = "paillier-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["std_rng"] }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }